# langchain-academy-study

./: .gitignore  main.py  pyproject.toml
module-0/: basics.ipynb
module-1/: 2-simple-graph.ipynb  4-chain.ipynb  5-router.ipynb  6-agent.ipynb  7-agent-memory.ipynb  8-deployment.ipynb
module-1/studio/: agent.py  pyproject.toml  router.py
module-2/: 1-state-schema.ipynb  2-state-reducers.ipynb  3-multiple-schemas.ipynb  4-trim-filter-messages.ipynb  5-chatbot-summarization.ipynb  6-chatbot-external-memory.ipynb
module-3/: 4-dynamic-breakpoints.ipynb
